fix text and alignment

--- a/src/components/scoopForSchool.module.css
+++ b/src/components/scoopForSchool.module.css
@@ -26,7 +26,7 @@
 .list {
   font-size: 1rem;
   line-height: 0.5rem;
-  margin-left: 10vw;
+  margin-left: 12vw;
 }
 
 .buttons {
